[package]
name = "cookie-monster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest_cookie_store = "0.5.0"
aes-gcm = "0.10.1"
base64 = "0.13.1"
urlencoding = "2.1.2"
rand = "0.8.5"


[dependencies.reqwest]
version = "0.11.12"
features = ["cookies"]

[dependencies.cookie]
version = "0.16"
features = ["secure"]